# docker-allure

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  update_allure_versions.py
.github/workflows/: dockerhub.yml
allure-results/: 097adb48-5380-4e26-ab81-c4a125a3ac30-container.json  1098078f-e7b2-43f9-8333-d6d460b5fbed-container.json  14c3e7c8-a4af-4f22-aa8e-b06a8b1150f7-result.json  18e5c48c-ca67-4842-91d1-01af64bd4488-result.json  a59192ac-47e1-4379-aa44-a75e208296d3-result.json  de2f8ca9-6668-4264-adde-d9b14df7a3e1-container.json
tests/: README.md  test_docker_allure.py
