[project]
name = "docker-allure-tests"
version = "0.1.0"
description = "Tests for Docker Allure image"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.0.0",
    "docker>=7.0.0",
    "requests>=2.31.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
